# Engine

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md
Application/: CMakeLists.txt
Application/Source/: Main.cpp  NewDeleteReplacement.cpp
Core/: CMakeLists.txt
Core/Include/Engine/Core/: Common.hpp  Context.hpp  Core.hpp  Event.hpp  IO.hpp  String.hpp  System.hpp  Window.hpp
Core/Include/Engine/Core/Collections/: List.hpp
Core/Include/Engine/Core/Input/: Keyboard.hpp  KeyboardState.hpp  ScanCode.hpp
Core/Include/Engine/Core/Memory/: GeneralPurposeAllocator.hpp  IAllocator.hpp  MemoryCoordinator.hpp  PlatformPageAllocator.hpp
Core/Source/: Context.cpp  Core.cpp
Core/Source/Engine/Core/: Context.cpp  IO.cpp  System.cpp  Window.cpp
Core/Source/Engine/Core/Collections/: List.cpp
Core/Source/Engine/Core/Input/: Keyboard.cpp  KeyboardState.cpp  ScanCode.cpp
Core/Source/Engine/Core/Memory/: Common.cpp  GeneralPurposeAllocator.cpp  MemoryCoordinator.cpp  PlatformPageAllocator.cpp
Graphics/: CMakeLists.txt
Graphics/Include/Engine/Graphics/: Context.hpp  Graphics.hpp  GraphicsContext.hpp  Shader.hpp
Graphics/Source/: Context.cpp  Graphics.cpp  GraphicsContext.cpp
Graphics/Source/Engine/Graphics/: GraphicsContext.cpp  Shader.cpp
Graphics/Source/glad/: glad.c  glad.h
Scripts/: Build.py
